--- a/styles.css
+++ b/styles.css
@@ -172,39 +172,17 @@ body {
   width: 75px;
 }
 
-.play-button:hover {
+.play-button-paused:hover {
   cursor: pointer;
   padding: 8px 24px;
   transition: padding .2s;
 }
 
-.play-button:active {
-  padding: 5px 22px;
-}
-
-/* .play-button {
-  width: 0;
-  height: 0;
-  border-top: 12px solid transparent;
-  border-bottom: 12px solid transparent;
-  border-left: 12px solid white;
-  border-right: none;
-  background: transparent;
-  outline: none;
-}
-
-.play-button:hover{
+.play-button-active:hover {
   cursor: pointer;
-  border-top: 14px solid transparent;
-  border-bottom: 14px solid transparent;
-  border-left: 14px solid white;
+  padding: 8px 24px;
+  transition: padding .2s;
 }
-
-.play-button:active {
-  border-top: 11px solid transparent;
-  border-bottom: 11px solid transparent;
-  border-left: 11px solid white;
-} */
 
 .iframe-container {
   height: 0;
@@ -228,5 +206,18 @@ body {
 @media screen and (max-width: 768px) {
   .artist-content {
     flex-direction: column;
+    align-items: center;
+  }
+
+  .artist-content-subsection {
+    width: 100%;
+  }
+
+}
+
+/* IPHONE */
+@media screen and (max-width: 425px) {
+  .track-container > span {
+    font-size: 14px;
   }
 }
